Fix pagination vertical alignment
(cherry picked from commit 9a6ed67ed63ecfb47e0bd52418d64299d3fac07a)

--- a/app/stylesheets/alchemy/admin/pagination.scss
+++ b/app/stylesheets/alchemy/admin/pagination.scss
@@ -116,6 +116,12 @@
   margin-left: auto;
   padding: var(--spacing-2);
 
+  label {
+    display: flex;
+    align-items: center;
+    gap: var(--spacing-2);
+  }
+
   @media screen and (max-width: vars.$large-screen-break-point) {
     --sidebar-width: auto;
 
